<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.s_trade.s_trade.NewItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_newItem"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:background="@color/colorPrimaryDark" />

            <ImageView
                android:id="@+id/imageView_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_back"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_detail"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/cloud"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_itemName"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_description"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/item_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:background="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_price"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/item_price"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:inputType="numberDecimal"
                    android:background="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_category"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/item_category"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@color/white"
                        android:prompt="@string/category_title"
                        android:entries="@array/category_listforsale"
                        android:spinnerMode="dialog"
                        android:textAlignment="center">
                    </Spinner>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/image_down"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_photo"
                        android:textColor="@color/black"
                        android:layout_marginLeft="25dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/button_selectPhoto"
                            android:layout_width="0dp"
                            android:layout_weight="0.87"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/button_upload"
                            android:textSize="20sp"
                            android:paddingBottom="8dp"
                            android:paddingLeft="25dp"
                            android:paddingRight="25dp"
                            android:paddingTop="8dp"
                            android:background="@drawable/button_user" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_contact"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cloud"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_name"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/contact_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_phoneNum"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/contact_phoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@color/white"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_sell"
                android:paddingBottom="8dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:paddingTop="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:background="@drawable/button_sell"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
