<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.s_trade.s_trade.SoldActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cloud"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_item"
                android:paddingBottom="10dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:background="@color/colorPrimaryDark" />

            <ImageView
                android:id="@+id/imageView_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_back"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/item_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <com.jude.rollviewpager.RollPagerView
                android:id="@+id/rollpv"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_gravity="center"
                app:rollviewpager_play_delay="3000"/>

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_HKD"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:textColor="@color/gold" />

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="28sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:textColor="@color/gold"
                    android:textStyle="bold"/>

                <!--<ImageView-->
                    <!--android:id="@+id/item_like"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:src="@drawable/image_like_2"/>-->
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_description"
                android:textSize="30sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/grey2" />
        </LinearLayout>

        <Button
            android:id="@+id/button_sold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:background="@drawable/button_call"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>
