<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cloud">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_sell"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/image_secondhand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/button_sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_startSell"
                android:paddingBottom="8dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:textSize="20sp"
                android:background="@drawable/button_sell"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sellProcess"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:src="@drawable/image_process_1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:src="@drawable/image_process_2"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:src="@drawable/image_process_3"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:src="@drawable/image_process_4"/>


        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:background="@color/white">-->

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/text_sellFAQ"-->
                <!--android:textSize="20sp"-->
                <!--android:textColor="@color/black"-->
                <!--android:textAlignment="center"-->
                <!--android:layout_marginTop="20dp"-->
                <!--android:layout_marginBottom="20dp"/>-->
        <!--</LinearLayout>-->

    </LinearLayout>
</ScrollView>